feat(data): add crafting recipes

--- a/output/production/WingedBoots.main/assets/wingedboots/lang/en_us.json
+++ b/output/production/WingedBoots.main/assets/wingedboots/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemgroup.jolon_group": "Jolon's Stuff",
+  "itemgroup.jolon_group": "Winged Boots",
   "item.wingedboots.winged_boots": "Winged Boots",
   "item.wingedboots.floaty_smithing_template": "Smithing Template",
   "effect.wingedboots.float": "Floating",
